--- a/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/views/portal.scss
@@ -114,6 +114,7 @@
             }
             &:hover {
                 background: rgba(158, 158, 158, 0.02);
+                box-shadow: 0 5px 12px 0 rgba(0,0,0,0.12);
             }
             .app-logo {
                 position: absolute;
