Database detail update

--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -127,6 +127,10 @@
 
         .console-table {
 
+            .ant-table-placeholder {
+                padding: 8px 4px;
+            }
+
             .ant-pagination {
                 margin-right: 20px;
             }
