Adjust position of Logo

--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/layout.scss
@@ -1,3 +1,8 @@
-.sidebar {
-    height: 100%;
+.app-analytics {
+    .header {
+        padding-left: 30px;
+    }
+    .sidebar {
+        height: 100%;
+    }
 }
