--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -29,7 +29,8 @@
 
                 .ant-tree-node-content-wrapper {
                     width: 100%;
-                    
+                    padding: 5px 5px;
+
                     &:hover, &.ant-tree-node-selected {
                         background-color: #F1F5FF;
                     }
@@ -38,7 +39,7 @@
                         display: none;
                         position: absolute;
                         right: 12px;
-                        top: 5px;
+                        top: 7px;
                     }
 
                     .tree-node-hover-item {
@@ -60,6 +61,11 @@
                 span.ant-tree-iconEle,
                 span.ant-tree-switcher {
                     width: 16px;
+                }
+                
+                span.ant-tree-switcher {
+                    height: 28px;
+                    line-height: 28px;
                 }
     
                 span.ant-tree-iconEle {
@@ -104,21 +110,31 @@
 
             .ant-tabs-tab {
                 margin-right: 0px;
-                line-height: 19px;
+                line-height: 20px;
                 padding-left: 28px;
+                padding-right: 26px;
                 border-left: none;
                 text-align: left;
                 min-width: 150px;
                 border-radius: 0;
                 border-bottom: 1px solid #dddddd;
                 background: #FAFAFA;
+                font-size: 12px;
+                color: #333333;
 
                 .anticon-close {
                     margin-top: -5px;
                     line-height: 10px;
-                    opacity: 1;
+                    opacity: 0;
                     font-size: 11px;
                 }
+            }
+
+            .tab-ellipsis {
+                display: inline-block;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 120px;
             }
 
             .ant-tabs-tab-active {
@@ -128,13 +144,17 @@
                 border-bottom: 1px solid #ffffff;
             }
 
+            .ant-tabs-tab:hover .anticon-close {
+                opacity: 1;
+            }
+
             .ant-tabs-tab-active:after {
                 content: "";
                 position: absolute;
-                top: 0px;
+                top: -1px;
                 left: -1px;
                 right: -1px;
-                height: 3px;
+                height: 2px;
                 z-index: 3;
                 opacity: 0.8;
                 background: #2491F7;
