--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -17,7 +17,7 @@
    }
 
    .s-catalogue {
-        padding: 5px 15px 5px 12px;
+        padding: 6px 15px 5px 12px;
         padding-bottom: 80px;
         height: 100%;
         overflow-y: auto;
@@ -26,7 +26,7 @@
         .ant-tree {
 
             li {
-
+                padding: 4px 0 0 0;
                 .ant-tree-node-content-wrapper {
                     width: 100%;
                     padding: 5px 5px;
@@ -89,6 +89,22 @@
     padding-top: 20px;
     background: #ffffff;
 
+    .ide-editor .ide-toolbar .ant-btn {
+        padding-left: 10px;
+    }
+
+    .ide-toobar-select {
+        margin-left: 10px;
+        width: 120px;
+        .ant-select-selection--single {
+            height: 26px;
+        }
+
+        .ant-select-selection__rendered {
+            line-height: 24px;
+        }
+    }
+
     .pane-wrapper,
     .ant-tabs-content {
         height: 100%;
@@ -103,7 +119,7 @@
         
         &>.ant-tabs-bar {
 
-            margin-bottom: 1px;
+            margin-bottom: 0px;
             border-radius: 0px;
             margin-left: -1px;
             border-left: none;
