--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -514,76 +514,73 @@
     }
     .tabs-container{
         border: 1px solid #DDDDDD;
+        border-top: none;
     }
     .tabs-row{
         padding: 0 20px;
     }
     .ant-tabs{
         // height: 36px;
-        .ant-tabs-content{
-            height: auto;
-            overflow: hidden;
-            padding-top: 10px;
-            border-top: 1px solid #DDDDDD;
-            table{
-                background-color: #F5F5F5;
-                padding: 0;
-            }
+        // .ant-tabs-content{
+        //     height: auto;
+        //     overflow: hidden;
+        //     padding-top: 10px;
+        //     // border-top: 1px solid #DDDDDD;
+        //     table{
+        //         background-color: #F5F5F5;
+        //         padding: 0;
+        //     }
 
-            .ant-table-small {
-                .ant-table-tbody {
-                    tr{
-                        td{
-                            background: white;
-                            padding: 7px 20px;
-                            font-size: 12px;
-                            color: #333333;
-                        }
-                    }
-                }
-            }
-            .ant-table-thead{
-                // background-color: #F5F5F5;
-                th{
-                    background-color: #F5F5F5;
-                    padding: 6.5px 21px;
-                    span{
-                        font-size: 12px;
-                        font-weight: normal;
-                    }
-                }
-            }
-        }
+        //     .ant-table-small {
+        //         .ant-table-tbody {
+        //             tr{
+        //                 td{
+        //                     background: white;
+        //                     padding: 7px 20px;
+        //                     font-size: 12px;
+        //                     color: #333333;
+        //                 }
+        //             }
+        //         }
+        //     }
+        //     .ant-table-thead{
+        //         // background-color: #F5F5F5;
+        //         th{
+        //             background-color: #F5F5F5;
+        //             padding: 6.5px 21px;
+        //             span{
+        //                 font-size: 12px;
+        //                 font-weight: normal;
+        //             }
+        //         }
+        //     }
+        // }
         .ant-tabs-bar{
-            height: 36px;
-            margin-bottom: 0px;
-            border-bottom: none;
-            .ant-tabs-nav-container{
-                height: 35px;
-            }
+            // height: 36px;
+            // margin-bottom: 0px;
+            // border-bottom: none;
+            // .ant-tabs-nav-container{
+            //     height: 35px;
+            // }
         }
-        .ant-tabs-nav-scroll{
-            // background-color: #FAFAFA;
-        }
-        .ant-tabs-ink-bar{
-            // display: none !important;
-        }
-        .ant-tabs-nav{
-            .ant-tabs-tab{
-                min-width: 110px;
-                display: inline-block;
-                border: 1px solid #DDDDDD;
-                border-bottom: none;
-                border-left: none;
-                line-height: 34px;
-                padding: 0;
-                text-align: center;
-                border-top: none;
-            }
-            .ant-tabs-tab-active{
-                border-bottom: none;
-            }
-        }
+        // .ant-tabs-nav{
+        //     .ant-tabs-tab{
+        //         min-width: 110px;
+        //         display: inline-block;
+        //         // border: 1px solid #DDDDDD;
+        //         // border-bottom: none;
+        //         border-left: none;
+        //         line-height: 34px;
+        //         padding: 0;
+        //         text-align: center;
+        //         margin-right: 0;
+        //         // border-top: none;
+        //     }
+        //     .ant-tabs-tab-active{
+        //         // border-bottom: none;
+        //         border-top: 1px solid #2491F7;
+        //     }
+        // }
     }
     .table-detail-panel{
         padding: 0 20px 0 21px;
