--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -515,72 +515,75 @@
     .tabs-container{
         border: 1px solid #DDDDDD;
         border-top: none;
+        border-right: none;
     }
     .tabs-row{
         padding: 0 20px;
     }
     .ant-tabs{
         // height: 36px;
-        // .ant-tabs-content{
-        //     height: auto;
-        //     overflow: hidden;
-        //     padding-top: 10px;
-        //     // border-top: 1px solid #DDDDDD;
-        //     table{
-        //         background-color: #F5F5F5;
-        //         padding: 0;
-        //     }
+        .ant-tabs-content{
+            height: auto;
+            overflow: hidden;
+            padding-top: 10px;
+            border-right: 1px solid #DDDDDD;
+            // border-top: 1px solid #DDDDDD;
+            table{
+                background-color: #F5F5F5;
+                padding: 0;
+            }
 
-        //     .ant-table-small {
-        //         .ant-table-tbody {
-        //             tr{
-        //                 td{
-        //                     background: white;
-        //                     padding: 7px 20px;
-        //                     font-size: 12px;
-        //                     color: #333333;
-        //                 }
-        //             }
-        //         }
-        //     }
-        //     .ant-table-thead{
-        //         // background-color: #F5F5F5;
-        //         th{
-        //             background-color: #F5F5F5;
-        //             padding: 6.5px 21px;
-        //             span{
-        //                 font-size: 12px;
-        //                 font-weight: normal;
-        //             }
-        //         }
-        //     }
-        // }
-        .ant-tabs-bar{
-            // height: 36px;
-            // margin-bottom: 0px;
-            // border-bottom: none;
-            // .ant-tabs-nav-container{
-            //     height: 35px;
-            // }
+            .ant-table-small {
+                .ant-table-tbody {
+                    tr{
+                        td{
+                            background: white;
+                            padding: 7px 20px;
+                            font-size: 12px;
+                            color: #333333;
+                        }
+                    }
+                }
+            }
+            .ant-table-thead{
+                // background-color: #F5F5F5;
+                th{
+                    background-color: #F5F5F5;
+                    padding: 6.5px 21px;
+                    span{
+                        font-size: 12px;
+                        font-weight: normal;
+                    }
+                }
+            }
         }
-        // .ant-tabs-nav{
-        //     .ant-tabs-tab{
-        //         min-width: 110px;
-        //         display: inline-block;
-        //         // border: 1px solid #DDDDDD;
-        //         // border-bottom: none;
-        //         border-left: none;
-        //         line-height: 34px;
-        //         padding: 0;
-        //         text-align: center;
-        //         margin-right: 0;
-        //         // border-top: none;
-        //     }
-        //     .ant-tabs-tab-active{
-        //         // border-bottom: none;
-        //         border-top: 1px solid #2491F7;
-        //     }
-        // }
+        
+        .ant-tabs-bar{
+            height: 36px;
+            margin-bottom: 0;
+            .ant-tabs-nav-container{
+                height: 35px;
+            }
+        }
+        .ant-tabs-nav{
+            .ant-tabs-tab{
+                height: 36px;
+                min-width: 110px;
+                display: inline-block;
+                // border: 1px solid #DDDDDD;
+                // border-bottom: none;
+                border-left: none;
+                line-height: 34px;
+                padding: 0;
+                text-align: center;
+                margin-right: 0;
+                // border-top: none;
+            }
+            .ant-tabs-tab-active{
+                // border-bottom: none;
+                border-top: 1px solid #2491F7;
+            }
+        }
     }
     .table-detail-panel{
         padding: 0 20px 0 21px;
@@ -611,6 +614,9 @@
     height: 100%;
     padding-bottom: 50px;
     overflow: scroll;
+    .table-small .ant-table-small .ant-table-tbody tr td{
+        height: 40px;
+    }
     .panel{
         padding-left: 20px;
         padding-right: 20px;
