--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -141,7 +141,8 @@
                 padding-left: 2px;
                 margin-top: -2px;
                 border-right: 0;
-
+                font-size: 12px;
+                
                 .ant-table-thead>tr>th {
                     padding: 8px 4px;
                     font-size: 12px;
