--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -608,7 +608,12 @@
     }
 }
 
-
+.m-editor {
+    .CodeMirror-scroll {
+        padding: 0;
+        margin: 0;
+    }
+}
 
 .edit-table-container{
     height: 100%;
