--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -22,9 +22,10 @@
     }
 
     .ide-content {
-        height: 100%;
-        padding-bottom: 50px;
+        // height: 100%;
+        // padding-bottom: 50px;
         top: 36px;
+        bottom: 0;
     }
 
     .ide-toolbar {
