--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/themes/dark.scss
@@ -380,7 +380,8 @@ $fontColor1: #2491F7;
     }
 
     // ================ Custom page styles ================ //
-    .toolbar .ant-btn, 
+    .toolbar .ant-btn,
+    .workbench-toolbar .ant-btn,
     .ant-tabs-bar .ant-tabs-tab, {
         background: $color2;
         color: $fontColor;
@@ -416,7 +417,7 @@ $fontColor1: #2491F7;
         }
     }
 
-    .ide-console {
+    .ide-editor .ide-console {
 
         background: $color3;
         border-color: $color3;
@@ -530,7 +531,7 @@ $fontColor1: #2491F7;
             }
         }
 
-        .toolbar {
+        .workbench-toolbar, .toolbar {
             background: $color2;
         }
 
