--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -218,13 +218,13 @@
                 flex-grow: 0;
                 flex-shrink: 0;
                 border-bottom: 1px solid #E8E8E8;
-                line-height: 35px;
+                line-height: 32px;
                 text-align: right;
                 font-size: 18px;
                 z-index: 999;
                 background: #ffffff;
                 padding-right: 15px;
-                padding-top:10px;
+                padding-top: 5px;
                 padding-bottom: 5px;
                 
                 .anticon {
@@ -392,7 +392,6 @@
 
 .dt-dev-task .task-editor {
     position: absolute;
-    padding-bottom: 35px;
     background: #f2f3f8;
     top: 0;
     bottom:0;
@@ -407,13 +406,15 @@
     }
 
     .browser-content {
-        height: 100%;
-        width: 100%;
-        position: relative;
+        position: absolute;
         padding-right: 30px;
-        padding-bottom: 30px;
+        padding-bottom: 40px;
         background: #FAFAFA;
+        bottom: 0;
+        top: 0;
+        width: 100%;
         border-top: 1px solid #dddddd;
+
         .browser-tabs {
 
             .ant-tabs-nav-container{
@@ -487,7 +488,7 @@
     }
 
 
-    .toolbar {
+    .workbench-toolbar {
 
         width: 100%;
         padding: 6px 20px;
@@ -562,20 +563,25 @@
             border-bottom: 1px solid #e9e9e9;
         }
 
-        .ant-tabs-bar {
-            margin-bottom: 1px;
-            border-bottom: 0;
-            border-radius: 0px;
-            margin-left: -1px;
-            border-left: none;
+        .browser-content {
+            &>.ant-tabs {
+                .ant-tabs-bar {
+                    margin-bottom: 1px;
+                    border-bottom: 0;
+                    border-radius: 0px;
+                    margin-left: -1px;
+                    border-left: none;
+                }
+        
+                .ant-tabs-content {
+                    height: 0px;
+                    min-height: 0px;
+                    border-bottom: 0px;
+                    background: #fff;
+                }
+            }
         }
 
-        .ant-tabs-content {
-            height: 0px;
-            min-height: 0px;
-            border-bottom: 0px;
-            background: #fff;
-        }
         .m-siderbench {
             width: 30px;
             position: absolute;
