--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -465,8 +465,13 @@
         font-size: 12px;
         color: #333333;
         margin-top: 20px;
-        line-height: 30px;
+        text-align: left;
         padding-left: 100px;
+        word-break: break-all;
+
+        .ant-row {
+            padding: 6px 0;
+        }
     }
 
     .response-warning {
