--- a/engine-ui/packages/console-ui/src/webapps/main/styles/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/layout.scss
@@ -201,3 +201,8 @@
 .ant-layout-sider {
     background: #ffffff;
 }
+
+.ant-input-affix-wrapper .ant-input {
+    padding: 6px 7px;
+    height: 32px;
+}
