--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -170,7 +170,7 @@
                 top: -1px;
                 left: -1px;
                 right: -1px;
-                height: 2px;
+                height: 3px;
                 z-index: 3;
                 opacity: 0.8;
                 background: #2491F7;
@@ -465,8 +465,13 @@
         font-size: 12px;
         color: #333333;
         margin-top: 20px;
-        line-height: 30px;
+        text-align: left;
         padding-left: 100px;
+        word-break: break-all;
+
+        .ant-row {
+            padding: 6px 0;
+        }
     }
 
     .response-warning {
@@ -505,9 +510,7 @@
             }
         }
     }
-    .ant-pagination-item{
-        
-    }
+
     .ant-table-small{
         border-left: none;
         border-right: none;
@@ -517,22 +520,28 @@
     }
     .tabs-container{
         border: 1px solid #DDDDDD;
+        border-top: none;
+        border-right: none;
     }
     .tabs-row{
         padding: 0 20px;
     }
     .ant-tabs{
         // height: 36px;
+
         .ant-tabs-content{
             height: auto;
             overflow: hidden;
             padding-top: 10px;
-            border-top: 1px solid #DDDDDD;
+            border-right: 1px solid #DDDDDD;
+            // border-top: 1px solid #DDDDDD;
             table{
                 background-color: #F5F5F5;
                 padding: 0;
             }
-
+            .ant-table-body{
+                overflow: scroll;
+            }
             .ant-table-small {
                 .ant-table-tbody {
                     tr{
@@ -541,6 +550,7 @@
                             padding: 7px 20px;
                             font-size: 12px;
                             color: #333333;
+                            white-space: nowrap;
                         }
                     }
                 }
@@ -553,38 +563,37 @@
                     span{
                         font-size: 12px;
                         font-weight: normal;
+                        white-space: nowrap;
+
                     }
                 }
             }
         }
+        
         .ant-tabs-bar{
             height: 36px;
-            margin-bottom: 0px;
-            border-bottom: none;
+            margin-bottom: 0;
             .ant-tabs-nav-container{
                 height: 35px;
             }
         }
-        .ant-tabs-nav-scroll{
-            background-color: #FAFAFA;
-        }
-        .ant-tabs-ink-bar{
-            display: none !important;
-        }
         .ant-tabs-nav{
             .ant-tabs-tab{
+                height: 36px;
                 min-width: 110px;
                 display: inline-block;
-                border: 1px solid #DDDDDD;
-                border-bottom: none;
+                // border: 1px solid #DDDDDD;
+                // border-bottom: none;
                 border-left: none;
                 line-height: 34px;
                 padding: 0;
                 text-align: center;
-                border-top: none;
+                margin-right: 0;
+                // border-top: none;
             }
             .ant-tabs-tab-active{
-                border-bottom: none;
+                // border-bottom: none;
+                border-top: 1px solid #2491F7;
             }
         }
     }
@@ -610,10 +619,14 @@
         }
     }
 }
+
 .edit-table-container{
     height: 100%;
     padding-bottom: 50px;
     overflow: scroll;
+    .table-small .ant-table-small .ant-table-tbody tr td{
+        height: 40px;
+    }
     .panel{
         padding-left: 20px;
         padding-right: 20px;
