--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -22,9 +22,10 @@
     }
 
     .ide-content {
-        height: 100%;
-        padding-bottom: 50px;
+        // height: 100%;
+        // padding-bottom: 50px;
         top: 36px;
+        bottom: 0;
     }
 
     .ide-toolbar {
@@ -141,7 +142,8 @@
                 padding-left: 2px;
                 margin-top: -2px;
                 border-right: 0;
-
+                font-size: 12px;
+                
                 .ant-table-thead>tr>th {
                     padding: 8px 4px;
                     font-size: 12px;
