--- a/engine-ui/packages/console-ui/src/webapps/main/styles/layout.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/layout.scss
@@ -203,7 +203,5 @@
 }
 
 .ant-input-affix-wrapper .ant-input {
-    padding: 6px 7px;
-    height: 32px;
-    min-height: 32px;
+    min-height: auto;
 }
