--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -167,6 +167,10 @@
                         text-indent: 5px;
                         background: inherit;
                     }
+
+                    textarea::-webkit-scrollbar { 
+                        display: none; 
+                    }
                 }
             }
         }
