--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
@@ -265,10 +265,10 @@ body:-webkit-full-screen {
     background: #EF5350;
 }
 .status_overview_running_font{
-    color: #00A755;
+    color: #2491F7;
 }
 .status_overview_running{
-    background: #00A755;
+    background: #2491F7;
 }
 .status_overview_stoped_font{
     color: #94A8C6;
