--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/main.scss
@@ -231,7 +231,7 @@ body:-webkit-full-screen {
     background: #F5A623;
 }
 .status_stoped{
-    background: #EF5350;
+    background: #94A8C6;
 }
 .status_run_fail{
     background: #EF5350;
