--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/operation.scss
@@ -326,6 +326,7 @@
     header{
         padding: 7.5px 0px 8.5px 21px;
         font-size: 14px;
+        font-weight: bold;
         color: rgba(0,0,0,0.85);
         line-height: 24px;
         border-bottom: 1px solid #dddddd;
