--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -542,26 +542,19 @@
         border: 1px solid #DDDDDD;
         border-top: none;
         border-right: none;
-    }
-    .tabs-row{
-        padding: 0 20px;
-    }
-    .ant-tabs{
-        // height: 36px;
 
+    &>.ant-tabs {
+            
         .ant-tabs-content{
-            height: auto;
-            overflow: hidden;
             padding-top: 10px;
-            border-right: 1px solid #DDDDDD;
-            // border-top: 1px solid #DDDDDD;
+            height: auto;
+            border-right: 1px solid #dddddd;
+        }
             table{
                 background-color: #F5F5F5;
                 padding: 0;
             }
-            .ant-table-body{
-                overflow: scroll;
-            }
+
             .ant-table-small {
                 .ant-table-tbody {
                     tr{
@@ -588,34 +581,69 @@
                     }
                 }
             }
-        }
-        
-        .ant-tabs-bar{
-            height: 36px;
-            margin-bottom: 0;
-            .ant-tabs-nav-container{
-                height: 35px;
-            }
-        }
-        .ant-tabs-nav{
-            .ant-tabs-tab{
-                height: 36px;
-                min-width: 110px;
-                display: inline-block;
-                // border: 1px solid #DDDDDD;
-                // border-bottom: none;
-                border-left: none;
-                line-height: 34px;
-                padding: 0;
+        &>.ant-tabs-bar {
+
+            margin-bottom: 0px;
+            border-radius: 0px;
+            margin-left: -1px;
+            border-left: none;
+
+            .ant-tabs-tab {
                 text-align: center;
-                margin-right: 0;
-                // border-top: none;
+                margin-right: 0px;
+                line-height: 20px;
+                padding-left: 26px;
+                padding-right: 26px;
+                border-left: none;
+                min-width: 150px;
+                border-radius: 0;
+                border-bottom: 1px solid #dddddd;
+                background: #FAFAFA;
+                font-size: 12px;
+                color: #333333;
+
+                .anticon-close {
+                    margin-top: -5px;
+                    line-height: 10px;
+                    opacity: 0;
+                    font-size: 11px;
+                }
             }
-            .ant-tabs-tab-active{
-                // border-bottom: none;
-                border-top: 1px solid #2491F7;
+
+            .tab-ellipsis {
+                display: inline-block;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 120px;
+            }
+
+            .ant-tabs-tab-active {
+                background: #fff;
+                border-color: #dddddd;
+                color: #2491F7;
+                border-bottom: 1px solid #ffffff;
+            }
+
+            .ant-tabs-tab:hover .anticon-close {
+                opacity: 1;
+            }
+
+            .ant-tabs-tab-active:after {
+                content: "";
+                position: absolute;
+                top: -1px;
+                left: -1px;
+                right: -1px;
+                height: 3px;
+                z-index: 3;
+                opacity: 0.8;
+                background: #2491F7;
             }
         }
+    }
+    }
+    .tabs-row{
+        padding: 0 20px;
     }
     .table-detail-panel{
         padding: 0 20px 0 21px;
