--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -544,7 +544,22 @@
         border-right: none;
 
     &>.ant-tabs {
-            
+
+        .ant-tabs-bar {
+            .ant-tabs-nav-container{
+                height: 36px;
+            }
+            .ant-tabs-tab{
+                height: 35px;
+                display: inline-flex;
+                align-items: center;
+                border-left: 0;
+                margin-right: 0;
+            }
+            .ant-tabs-tab-active{
+                height: 36px;
+            }
+        }
         .ant-tabs-content{
             padding-top: 10px;
             height: auto;
@@ -581,65 +596,6 @@
                     }
                 }
             }
-        &>.ant-tabs-bar {
-
-            margin-bottom: 0px;
-            border-radius: 0px;
-            margin-left: -1px;
-            border-left: none;
-
-            .ant-tabs-tab {
-                text-align: center;
-                margin-right: 0px;
-                line-height: 20px;
-                padding-left: 26px;
-                padding-right: 26px;
-                border-left: none;
-                min-width: 150px;
-                border-radius: 0;
-                border-bottom: 1px solid #dddddd;
-                background: #FAFAFA;
-                font-size: 12px;
-                color: #333333;
-
-                .anticon-close {
-                    margin-top: -5px;
-                    line-height: 10px;
-                    opacity: 0;
-                    font-size: 11px;
-                }
-            }
-
-            .tab-ellipsis {
-                display: inline-block;
-                overflow: hidden;
-                text-overflow: ellipsis;
-                max-width: 120px;
-            }
-
-            .ant-tabs-tab-active {
-                background: #fff;
-                border-color: #dddddd;
-                color: #2491F7;
-                border-bottom: 1px solid #ffffff;
-            }
-
-            .ant-tabs-tab:hover .anticon-close {
-                opacity: 1;
-            }
-
-            .ant-tabs-tab-active:after {
-                content: "";
-                position: absolute;
-                top: -1px;
-                left: -1px;
-                right: -1px;
-                height: 3px;
-                z-index: 3;
-                opacity: 0.8;
-                background: #2491F7;
-            }
-        }
     }
     }
     .tabs-row{
