--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -546,6 +546,7 @@
     &>.ant-tabs {
 
         .ant-tabs-bar {
+            margin-bottom: 0;
             .ant-tabs-nav-container{
                 height: 36px;
             }
