--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -151,6 +151,7 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 max-width: 120px;
+                color: #333333;
             }
 
             .ant-tabs-tab-active {
