--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -548,6 +548,10 @@
 
         .ant-tabs-bar {
             margin-bottom: 0;
+            .ant-tabs-ink-bar{
+                top: 0;
+                visibility: visible;
+            }
             .ant-tabs-nav-container{
                 height: 36px;
             }
