--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -245,10 +245,10 @@
         }
         .ant-form-item{
             margin-bottom: 20px;
-            display: flex;
-            align-items: center;
+            // display: flex;
+            // align-items: center;
             .ant-form-item-label{
-                line-height: 17px;
+                line-height: 36px;
             }
         }
         .ant-collapse-content{
