Alter add system variables

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -843,9 +843,17 @@
     }
     .m-keymapbox {
         position: relative;
+
         .pa {
             position: absolute;
         }
+
+        .col-plugin {
+            padding: 10px;
+            padding-right: 0;
+            cursor: pointer;
+        }
+
         .m-col {
             border-bottom: 1px dotted #ccc;
             background: #eee;
@@ -854,7 +862,6 @@
                 background: #ddd;
             }
             &.footer {
-                cursor: pointer;
                 background: #eee;
             }
             .cell {
@@ -924,6 +931,7 @@
     }
     .m-buttons {
         padding-top: 10px;
+        text-align: center;
         button {
             margin-bottom: 5px;
         }
