--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -347,18 +347,35 @@
 }
 
 // DML DDL样式
+// .tablepermission {
+//     color: rgba(0, 0, 0, 0.85);
+//     margin-left: 26px;
+// }
+// .content {
+//     border: 1px solid red;
+//     overflow: hidden;
+//     margin-left: 70px;
+//     margin-bottom: 20px;
+//     // .title {
+//     //     color: #999;
+//     //     border-bottom: 1px solid #ccc;
+//     //     margin-bottom: 5px;
+//     // }
+// }
+
 .tablepermission {
     color: rgba(0, 0, 0, 0.85);
-    margin-left: 26px;
+    margin-left: 36px;
+    margin-bottom: 25px;
 }
 .content {
-    // border: 1px solid red;
     overflow: hidden;
-    margin-left: 70px;
-    margin-bottom: 20px;
+    // border: 1px solid red;
+    margin-left: 50px;
+    margin-bottom: 30px;
+    margin-top: -20px;
     .title {
-        color: #999;
-        border-bottom: 1px solid #ccc;
+        border-bottom: 1px solid #e9e9e9;
         margin-bottom: 5px;
     }
 }
