--- a/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
+++ b/engine-ui/packages/console-ui/src/webapps/analyticsEngine/styles/views/workbench.scss
@@ -85,8 +85,8 @@
 .m-mainbench {
     position: absolute;
     width: 100%;
-    height: 100%;
-    padding-top: 20px;
+    top:20px;
+    bottom: 0px;
     background: #ffffff;
 
     .ide-editor .ide-toolbar .ant-btn {
@@ -107,7 +107,7 @@
 
     .pane-wrapper,
     .ant-tabs-content {
-        height: 100%;
+        height: calc(100% - 32px);
     }
 
     .pane-wrapper {
