--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -1,4 +1,5 @@
 @import '../const.scss';
+@import './tablePane.scss';
 .dt-dev-task {
 
     .ant-layout-sider {
@@ -408,9 +409,8 @@
     .browser-content {
         position: absolute;
         padding-right: 30px;
-        padding-bottom: 40px;
         background: #FAFAFA;
-        bottom: 0;
+        bottom: 40px;
         top: 0;
         width: 100%;
         border-top: 1px solid #dddddd;
@@ -600,7 +600,7 @@
             
         }
         .editor-container {
-            height: 100%;
+            height: calc(100% - 30px);
             border: 1px solid #e9e9e9;
             border-radius: 4px;
             border-top-left-radius: 0;
