--- a/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/stream/styles/pages/task.scss
@@ -468,9 +468,8 @@
     .browser-content {
         position: absolute;
         padding-right: 30px;
-        padding-bottom: 40px;
         background: #FAFAFA;
-        bottom: 0;
+        bottom: 40px;
         top: 0;
         width: 100%;
         border-top: 1px solid #dddddd;
@@ -646,7 +645,7 @@
             
         }
         .editor-container {
-            height: 100%;
+            height: calc(100% - 30px);
             border: 1px solid #e9e9e9;
             border-radius: 4px;
             border-top-left-radius: 0;
