--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/tablePane.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/tablePane.scss
@@ -19,6 +19,7 @@
             font-style: italic;
             color: #666;
             font-size: 12px;
+            padding-left: 15px;
         }
         .tablePane-table-box{
             margin-top: 12px;
