--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/dataManage.scss
@@ -365,3 +365,10 @@
         display: inline-block;
     }
 }
+
+.formItem_inline_icon{
+    position: absolute;
+    left: 115px;
+    width: 20px;
+    line-height: 32px;
+}
