--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -555,6 +555,7 @@
         
         .normal-tab {
             color: rgba(0, 0, 0, 0.65);
+            max-width: 60px;
         }
         .Resizer.vertical {
             border-top: 1px solid #e9e9e9;
