--- a/engine-ui/packages/console-ui/src/webapps/dataApi/styles/main.scss
+++ b/engine-ui/packages/console-ui/src/webapps/dataApi/styles/main.scss
@@ -17,3 +17,9 @@ table{
 .big-tooltip .ant-tooltip-inner{
     max-width: 350px;
 }
+.ant-table-thead > tr > th.text-middle{
+    text-align: center;
+}
+.text-middle{
+    text-align: center;
+}
